objects/HW1__Call_Plan__c.object
<CustomObject>
    <fields>
        <fullName>HW1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_A__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance is Customer Action-oriented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_Alternative__c</fullName>
        <label>Advance (Alternative)</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance is Measurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_Primary__c</fullName>
        <label>Advance (Primary)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_R__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance is Realistic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_S__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance is Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Advance_T__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advance is Time-based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Call_Date__c</fullName>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HW1__Capabilities__c</fullName>
        <label>Capabilities</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Contact_Title__c</fullName>
        <formula>HW1__Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW1__Current_Situation_Resources__c</fullName>
        <label>Current Situation Resources</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Current_Situation__c</fullName>
        <label>Current Situation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Centered_Purpose__c</fullName>
        <label>Customer-Centered Purpose</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_1_Explicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 1 (Explicit)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_1_Expressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 1 (Expressed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_1_Implied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 1 (Implied)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_1_ToBeDeveloped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 1 (To Be Developed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_1__c</fullName>
        <label>Customer Need 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_2_Explicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 2 (Explicit)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_2_Expressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 2 (Expressed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_2_Implied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 2 (Implied)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_2_ToBeDeveloped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 2 (To Be Developed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_2__c</fullName>
        <label>Customer Need 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_3_Explicit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 3 (Explicit)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_3_Expressed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 3 (Expressed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_3_Implied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 3 (Implied)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_3_ToBeDeveloped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Need 3 (To Be Developed)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Customer_Need_3__c</fullName>
        <label>Customer Need 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Event_Id__c</fullName>
        <label>Event Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HW1__Implication_Questions__c</fullName>
        <label>Implication Questions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Implication__c</fullName>
        <label>Implication</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Lead_Title__c</fullName>
        <formula>HW1__Lead__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HW1__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Call Plans</relationshipLabel>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW1__Need_Payoff_Questions__c</fullName>
        <label>Need-Payoff Questions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Need_Payoff__c</fullName>
        <label>Need-Payoff</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Call Plans</relationshipLabel>
        <relationshipName>Call_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW1__Problem_Questions__c</fullName>
        <label>Problem Questions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Problem__c</fullName>
        <label>Problem</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not the Template can be seen by others.</description>
        <inlineHelpText>Defines whether or not the Template can be seen by others.</inlineHelpText>
        <label>Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HW1__Situation_Questions__c</fullName>
        <label>Situation Questions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Situation__c</fullName>
        <label>Situation</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HW1__Template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <label>Call Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HW1__Call_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>HW1__Account__c</columns>
        <columns>HW1__Contact__c</columns>
        <columns>HW1__Opportunity__c</columns>
        <columns>HW1__Situation__c</columns>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Call Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HW1__All</fullName>
        <columns>HW1__Call_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>HW1__Account__c</columns>
        <columns>HW1__Contact__c</columns>
        <columns>HW1__Opportunity__c</columns>
        <columns>HW1__Situation__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HWCP-{0000}</displayFormat>
        <label>Call Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>